initial setup and a few basic changes

--- a/MyOrkWaaaghApiApp/MyOrkWaaaghApi/MyOrkWaaaghApi.csproj
+++ b/MyOrkWaaaghApiApp/MyOrkWaaaghApi/MyOrkWaaaghApi.csproj
@@ -4,10 +4,15 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>70434f4a-7dc9-4bb8-aedb-1d4c917ac2f6</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
