--- a/MyOrkWaaaghApiApp/MyOrkWaaaghApi/Properties/launchSettings.json
+++ b/MyOrkWaaaghApiApp/MyOrkWaaaghApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7168;http://localhost:5114",
+      "applicationUrl": "https://localhost:7168",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
